--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -1,7 +1,7 @@
 <style>
-  body{
-      background-color: #f8f9fa;
-  }
+    body {
+        background-color: #f8f9fa;
+    }
 </style>
 
 <div class="container" style="max-width: 960px">
@@ -37,9 +37,10 @@
           <%= f.fields_for :profile do |pf| %>
             <div class="col-sm-6">
               <% @this_year = Time.zone.now.strftime('%Y') %>
+              <% @month = Time.zone.now.strftime('%m').to_i > 4 ? 1 : 0 %>
               <%= pf.label "入学年(西暦) ※一度入力したら変更できません", class: "form-label" %>
-              <%= pf.text_field :enrolled_year, class: "form-control", id: "school_class", placeholder: "1年生(#{@this_year.to_i - 1}年) 2年生(#{@this_year.to_i - 2}年)"+
-                " 3年生(#{@this_year.to_i - 3}年) 4年生(#{@this_year.to_i - 4}年)", maxlength: "4" %>
+              <%= pf.text_field :enrolled_year, class: "form-control", id: "school_class", placeholder: "1年生(#{@this_year.to_i - 1 + @month}年) 2年生(#{@this_year.to_i - 2 + @month}年)" +
+                " 3年生(#{@this_year.to_i - 3 + @month }年) 4年生(#{@this_year.to_i - 4 + @month }年)", maxlength: "4" %>
             </div>
             <div class="col-12">
               <%= pf.label "学科", class: "form-label" %>
