--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,12 +1,22 @@
 <div class="p-3 my-3 text-dark rounded shadow-sm" style="<%= "background-color: rgba(29,144,190,0.1)" if new_value.include?(value.id) %>">
   <div class="form-inline">
-    <%= link_to profile_path(value.visitor.userid), class: "text-decoration-none" do %>
-      <%= image_tag value.visitor.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "30px", height: "30px" %>
-      <span><%= value.decorate.icon %></span>
-      <strong><%= value.visitor.nickname %></strong>
+    <% if value.action != "community_chat" %>
+      <%= link_to profile_path(value.visitor.userid), class: "text-decoration-none" do %>
+        <%= image_tag value.visitor.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "30px", height: "30px" %>
+        <span><%= value.decorate.icon %></span>
+        <strong><%= value.visitor.nickname %></strong>
+      <% end %>
+      <span style="color:lightseagreen"><%= 'さんが' %></span>
+      <%= render "notifications/#{value.action}", value: value, visited: value.visited, visitor: value.visitor %>
+    <% else %>
+      <%= link_to community_path(value.community_id), class: "text-decoration-none" do %>
+        <%= image_tag value.community.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "30px", height: "30px" %>
+        <span><%= value.decorate.icon %></span>
+        <strong><%= value.community.name %></strong>
+      <% end %>
+      <span style="color:lightseagreen"><%= 'で' %></span>
+      <%= render "notifications/community_chat", value: value, visited: value.visited, visitor: value.visitor %>
     <% end %>
-    <span style="color:lightseagreen"><%= 'さんが' %></span>
-    <%= render "notifications/#{value.action}", value: value, visited: value.visited, visitor: value.visitor %>
   </div>
   <div class="d-block">
     <div class="text-gray small" style="text-align: right">
