--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -35,12 +35,13 @@
           <hr class="my-4">
 
           <%= f.fields_for :profile do |pf| %>
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <% @this_year = Time.zone.now.strftime('%Y') %>
               <% @month = Time.zone.now.strftime('%m').to_i > 4 ? 1 : 0 %>
-              <%= pf.label "入学年(西暦) ※一度入力したら変更できません", class: "form-label" %>
-              <%= pf.text_field :enrolled_year, class: "form-control", id: "school_class", placeholder: "1年生(#{@this_year.to_i - 1 + @month}年) 2年生(#{@this_year.to_i - 2 + @month}年)" +
-                " 3年生(#{@this_year.to_i - 3 + @month }年) 4年生(#{@this_year.to_i - 4 + @month }年)", maxlength: "4" %>
+              <%= pf.label "入学年(西暦) ※一度入力したら変更できません Amica内の設定で非表示にできます", class: "form-label" %>
+              <br />
+              <%= pf.label "1年生(#{@this_year.to_i - 1 + @month}年) 2年生(#{@this_year.to_i - 2 + @month}年) 3年生(#{@this_year.to_i - 3 + @month }年) 4年生(#{@this_year.to_i - 4 + @month }年) 教員(0000)" %>
+              <%= pf.text_field :enrolled_year, class: "form-control", id: "school_class", placeholder: "入学年", maxlength: "4" %>
             </div>
             <div class="col-12">
               <%= pf.label "学科", class: "form-label" %>
@@ -59,7 +60,7 @@
             </div>
 
             <div class="col-sm-6">
-              <%= pf.label "学籍番号 (無い場合は0000000を入力)", class: "form-label" %>
+              <%= pf.label "学籍番号 (無い場合は0000000を入力) ※一度入力したら変更できません Amica内の設定で非表示にできます", class: "form-label" %>
               <%= pf.text_field :student_id, class: "form-control", id: "student_number", placeholder: "学籍番号", maxlength: "7" %>
             </div>
 
