--- a/app/views/comments/_hide_comments.html.erb
+++ b/app/views/comments/_hide_comments.html.erb
@@ -10,7 +10,7 @@
 
 <div class="my-3 p-3 bg-white rounded shadow-sm">
   <div class="d-flex text-muted">
-    <%= link_to profile_path(comment.user), style: "color:black" do %>
+    <%= link_to profile_path(comment.user.userid), style: "color:black" do %>
       <%= image_tag comment.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
     <% end %>
     <p class="pb-3 mb-0 lh-sm w-100">
