community_chatのモーダルで横長画像が引き伸ばされるバグの修正＆chatにaltの追加

--- a/app/views/chats/_file_modal.html.erb
+++ b/app/views/chats/_file_modal.html.erb
@@ -9,7 +9,7 @@
         <input type="hidden" id="type" value="file">
         <input type="file" id="file_uploader" data-behavior="chat_file">
       </div>
-      <img id="preview" src="" style="text-align: center; display: none;width: 100%;height: auto;" >
+      <img id="preview" src="" style="text-align: center; display: none;width: 100%;height: auto;" alt="preview">
       <div class="modal-footer">
         <label><!-- Button trigger modal -->
           <button id="file_submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
