--- a/app/views/communities_room/_file_modal.html.erb
+++ b/app/views/communities_room/_file_modal.html.erb
@@ -8,7 +8,7 @@
       <div class="modal-body">
         <input type="file" id="file_uploader">
       </div>
-      <img id="preview" src="" style="text-align: center; display: none;" alt="preview">
+      <img id="preview" src="" style="text-align: center; display: none;width: 100%;height: auto;" alt="preview">
       <div class="modal-footer">
         <label>
           <button id="community_file_submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
