--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix=”og:http://ogp.me/ns#”>
+  <meta property="og:url" content="Amica/app/views/layouts/application.html.erb" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Amica~puriparasaiko~" />
+  <meta property="og:description" content=" ページの説明文" />
+  <meta property="og:site_name" content="Amica" />
+  <meta property="og:image" content="Amica/app/assets/images/icon_touka.png" />
+
   <title>Amica</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
