--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja" class="h-100">
-  <head>
+<head prefix=”og:http://ogp.me/ns#”>
+  <meta property="og:url" content="Amica/app/views/layouts/home.html.erb"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Amica~友達いっぱいつくるよーん~"/>
+  <meta property="og:description" content=" ページの説明文"/>
+  <meta property="og:site_name" content="Amica" />
+  <meta property="og:image" content="Amica/app/assets/images/icon_touka.png"/>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <title>Amica</title>
