--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -104,6 +104,7 @@
         <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaはあなたの学校生活に<span class="Text-Span JS_ScrollAnimationItem">新たな出会いをプラス</span>する<span class="Text-Span JS_ScrollAnimationItem">コミュニケーションツール</span>です
         </p>
         <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">このアプリケーションはISC専用の友達出会い系SNSです。</p>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">あなたの好きなゲームや音楽、スポーツなどを学生のみなさんと共有することができます。</p>
         <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">あなたの<span class="Text-Span JS_ScrollAnimationItem">趣味や特技、知りたいこと、興味あること</span>などを<span class="Text-Span JS_ScrollAnimationItem">タグ</span>として入力し、タグを参照して自動的におすすめな友達を紹介してくれます。</p>
         <p class="mb-3 pb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">さらに、気になっていた人の趣味や特技なども可視化されたり、呼んでほしいニックネームなども登録するなどの更に親しくなれるような機能を用意していますので会話につながる工夫もできています。</p>
       </div>
