--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix=”og:http://ogp.me/ns#”>
+  <meta property="og:url" content="Amica/app/views/home/top.html.erb"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Amica"/>
+  <meta property="og:description" content="Amicaはあなたの学校生活に新たな出会いをプラスするSNSです。
+あなたの趣味や特技、知りたいこと、興味あることなどをタグとして入力し、タグを参照して自動的におすすめな友達を紹介してくれます。"/>
+  <meta property="og:site_name" content="Amica" />
+  <meta property="og:image" content="<%= image_tag('/OGP_Amica_icon.png') %>"/>
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <title>Amica</title>
