--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,7 +3,7 @@
 <head prefix=”og:http://ogp.me/ns#”>
   <meta property="og:url" content="Amica/app/views/layouts/home.html.erb"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Amica"/>
+  <meta property="og:title" content="Amica-友達探しSNS"/>
   <meta property="og:description" content="Amicaはあなたの学校生活に新たな出会いをプラスするSNSです。
 あなたの趣味や特技、知りたいこと、興味あることなどをタグとして入力し、タグを参照して自動的におすすめな友達を紹介してくれます。"/>
   <meta property="og:site_name" content="Amica" />
