publicフォルダにOGP用アイコン追加

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja" class="h-100">
-<head prefix=”og:http://ogp.me/ns#”>
+<head prefix="og:http://ogp.me/ns#">
   <meta property="og:url" content="Amica/app/views/layouts/home.html.erb"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Amica-友達探しSNS"/>
