--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -12,7 +12,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <title>Amica</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <%= favicon_link_tag('amica.ico') %>
   <%= stylesheet_link_tag 'home'%>
   <%= stylesheet_link_tag 'top' %>
