publicフォルダにOGP用アイコン追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <meta property="og:image" content="<%= image_tag('/OGP_Amica_icon.png') %>" />
 
   <title>Amica</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
   <%= favicon_link_tag('amica.ico') %>
   <%= csrf_meta_tags %>
