バグの修正

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
-    <meta name=”description” content=”ISC学生向けの友達作りサイトです。”/>
+    <meta name="description" content="ISC学生向けの友達作りサイトです。"/>
     <link rel="apple-touch-icon" href="public/apple-touch-icon.png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEWKYWJMZD"></script>
     <script>
