--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta property="og:description" content="Amicaはあなたの学校生活に新たな出会いをプラスするSNSです。
 あなたの趣味や特技、知りたいこと、興味あることなどをタグとして入力し、タグを参照して自動的におすすめな友達を紹介してくれます。" />
   <meta property="og:site_name" content="Amica" />
-  <meta property="og:image" content= 'image_url("OGP_Amica_icon.png")'/>
+  <meta property="og:image" content='<%=image_url("OGP_Amica_icon.png")%>'/>
 
   <title>Amica</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
