--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -9,6 +9,8 @@
   <meta property="og:site_name" content="Amica" />
   <meta property="og:image" content='<%=image_url("OGP_Amica_icon.png")%>'/>
 
+  <meta name="twitter:card" content="summary_large_image" />
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <title>Amica</title>
