--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,6 +8,7 @@
 あなたの趣味や特技、知りたいこと、興味あることなどをタグとして入力し、タグを参照して自動的におすすめな友達を紹介してくれます。"/>
   <meta property="og:site_name" content="Amica" />
   <meta property="og:image" content='<%=image_url("OGP_Amica_icon.png")%>'/>
+  <meta name="twitter:card" content="summary_large_image" />
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
