ファイル名のみタイポを修正

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -15,7 +15,7 @@
 <%= render "chats/menu_modal" %>
 <%= render "chats/file_modal" %>
 <%= render "chats/nav", user: @user %>
-<%= render "layouts/pagenate", pagenate: @pagenate %>
+<%= render "layouts/paginate", pagenate: @pagenate %>
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="messages">
