--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -46,5 +46,5 @@
     <%= render partial: 'communities/community', collection: @community, as: :community %>
   </div>
 
-  <%= render "layouts/pagenate", pagenate: @community %>
+  <%= render "layouts/paginate", pagenate: @community %>
 </div>
