--- a/app/views/communities/members.html.erb
+++ b/app/views/communities/members.html.erb
@@ -5,5 +5,5 @@
   <h2 class="text-center"><%= @community.name %> <%= member_text(@page) %></h2>
   <%= render partial: 'communities/user', collection: @member, as: :user,locals: { community:@community, fixed_current_user:@user, page:@page } %>
 
-  <%= render "layouts/pagenate", pagenate: @member %>
+  <%= render "layouts/paginate", pagenate: @member %>
 </div>
