--- a/app/views/profiles/_page.html.erb
+++ b/app/views/profiles/_page.html.erb
@@ -7,5 +7,5 @@
     <% end %>
     　<%= render partial: "profiles/user", collection: pagenate, as: :user %>
   </div>
-  <%= render 'layouts/pagenate', pagenate: pagenate %>
+  <%= render 'layouts/paginate', pagenate: pagenate %>
 </div>
