--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -13,7 +13,7 @@
   <div id="comments_area">
     <%= render 'comments/index', comments: @comments, count:@count %>
   </div>
-  <%= render "layouts/pagenate", pagenate: @comments %>
+  <%= render "layouts/paginate", pagenate: @comments %>
 </div>
 
 
