--- a/app/views/communities_room/show.html.erb
+++ b/app/views/communities_room/show.html.erb
@@ -19,7 +19,7 @@
 <div class="container" id="body">
   <% if @messages.size > 50 %>
     <div class="mt-3">
-      <%= render "layouts/pagenate", pagenate: @pagenate %>
+      <%= render "layouts/paginate", pagenate: @pagenate %>
     </div>
   <% end %>
 
